--- a/alura/React desenvolvendo com javaScript/organo/src/componetes/Botao/Botao.css
+++ b/alura/React desenvolvendo com javaScript/organo/src/componetes/Botao/Botao.css
@@ -7,7 +7,8 @@
     border: none;
     cursor: pointer;
     color: #fff;
-    margin: 16px 0px; 
+    margin: 16px 0px 16px 200px; 
+
 }
 
 .botao:hover{
